--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,6 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_d7975d884fb5_key -iv $encrypted_d7975d884fb5_iv
   -in google/keyfile.json.enc -out google/keyfile.json -d
 script:
-- cd $provider
+- cd $PROVIDER
 - npm install
 - serverless deploy
