--- a/openwhisk/serverless.yml
+++ b/openwhisk/serverless.yml
@@ -19,6 +19,7 @@ service: cloud-functions-research
 # $ npm install
 provider:
   name: openwhisk
+  timeout: 240
 
 # you can add packaging information here
 package:
@@ -30,8 +31,19 @@ package:
 #    - exclude-me-dir/**
 
 functions:
-  hello:
+  hello-128:
     handler: handler.hello
+    memorySize: 128
+    events:
+      - http: GET hello
+  hello-256:
+    handler: handler.hello
+    memorySize: 256
+    events:
+      - http: GET hello
+  hello-512:
+    handler: handler.hello
+    memorySize: 512
     events:
       - http: GET hello
 
