--- a/aws/serverless.yml
+++ b/aws/serverless.yml
@@ -11,7 +11,7 @@
 #
 # Happy Coding!
 
-service: ${env:AWS_SERVICE_NAME}-${env:MEMORY}
+service: ${env:AWS_SERVICE_NAME}
 
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
@@ -24,7 +24,6 @@ provider:
 # you can overwrite defaults here
   stage: dev
   region: eu-west-1
-  memorySize: ${env:MEMORY}
   timeout: 240
 
 # you can add statements to the Lambda function's IAM Role here
