--- a/aws/package.json
+++ b/aws/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "handler.js",
   "dependencies": {
-    "request": "^2.81.0"
+    "aws-sdk": "^2.82.0"
   },
   "devDependencies": {},
   "scripts": {
