Add simple upload to Google Storage

--- a/google2/package.json
+++ b/google2/package.json
@@ -9,6 +9,7 @@
   "author": "serverless.com",
   "license": "MIT",
   "dependencies": {
+    "google-cloud": "^0.56.0",
     "serverless-google-cloudfunctions": "^1.0.0"
   }
 }
