--- a/google2/serverless.yml
+++ b/google2/serverless.yml
@@ -1,23 +1,19 @@
-service: cloud-functions-research
+service: ${env:GOOGLE_CLOUD_SERVICE_NAME}
 
 provider:
   name: google
   runtime: nodejs
-  project: cloud-functions-2-168708
-  # the path to the credentials file needs to be absolute
-  credentials: keyfile.json
+  project: ${env:GOOGLE_CLOUD_PROJECT_NAME}
+  credentials: ${env:GOOGLE_CLOUD_KEYFILE}
   timeout: 240s
 
 plugins:
   - serverless-google-cloudfunctions
 
-# needs more granular excluding in production as only the serverless provider npm
-# package should be excluded (and not the whole node_modules directory)
 package:
   exclude:
     - node_modules/**
     - .gitignore
-    - package.json
     - .git/**
 
 functions:
@@ -47,23 +43,8 @@ functions:
     events:
       - http: path
 
-  # NOTE: the following uses an "event" event (pubSub event in this case).
-  # Please create the corresponding resources in the Google Cloud
-  # before deploying this service through Serverless
-
-  #second:
-  #  handler: event
-  #  events:
-  #    - event:
-  #        eventType: providers/cloud.pubsub/eventTypes/topic.publish
-  #        resource: projects/*/topics/my-topic
-
-# you can define resources, templates etc. the same way you would in a
-# Google Cloud deployment configuration
-#resources:
-#  resources:
-#    - type: storage.v1.bucket
-#      name: my-serverless-service-bucket
-#  imports:
-#    - path: my_template.jinja
+resources:
+  resources:
+    - type: storage.v1.bucket
+      name: ${env:GOOGLE_STORAGE_BUCKET_NAME}
 
