--- a/aws/package.json
+++ b/aws/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "handler.js",
   "dependencies": {
-    "aws-sdk": "^2.82.0"
+    "aws-sdk": "^2.82.0",
+    "bluebird": "^3.5.0"
   },
   "devDependencies": {},
   "scripts": {
