--- a/google2/package.json
+++ b/google2/package.json
@@ -9,6 +9,9 @@
   "author": "serverless.com",
   "license": "MIT",
   "dependencies": {
+    "@google-cloud/storage": "^1.3.1",
+    "bluebird": "^3.5.0",
+    "cloud-functions-runtime-config": "^0.1.1",
     "google-cloud": "^0.56.0",
     "serverless-google-cloudfunctions": "^1.0.0"
   }
