--- a/google2/package.json
+++ b/google2/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google-cloud/storage": "^1.3.1",
     "bluebird": "^3.5.0",
+    "cloud-functions-common": "git+https://github.com/quirk0o/cloud-functions-common.git",
     "cloud-functions-runtime-config": "^0.1.1",
     "google-cloud": "^0.56.0",
     "serverless-google-cloudfunctions": "^1.0.0"
