--- a/aws/package.json
+++ b/aws/package.json
@@ -5,7 +5,8 @@
   "main": "handler.js",
   "dependencies": {
     "aws-sdk": "^2.82.0",
-    "bluebird": "^3.5.0"
+    "bluebird": "^3.5.0",
+    "cloud-functions-common": "file:../lib"
   },
   "devDependencies": {},
   "scripts": {
