--- a/aws/package.json
+++ b/aws/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "aws-sdk": "^2.82.0",
     "bluebird": "^3.5.0",
-    "cloud-functions-common": "file:../lib"
+    "cloud-functions-common": "git+https://github.com/quirk0o/cloud-functions-common.git"
   },
   "devDependencies": {},
   "scripts": {
