--- a/google/package.json
+++ b/google/package.json
@@ -15,5 +15,8 @@
     "cloud-functions-runtime-config": "^0.1.1",
     "google-cloud": "^0.56.0",
     "serverless-google-cloudfunctions": "^1.0.0"
+  },
+  "peerDependencies": {
+    "serverless": "^1.26.1"
   }
 }
