--- a/packages/google/package.json
+++ b/packages/google/package.json
@@ -13,8 +13,10 @@
   "license": "MIT",
   "dependencies": {
     "@google-cloud/storage": "^1.3.1",
+    "@quirk0.o/async": "^1.0.0",
+    "@quirk0.o/benchmark": "^1.0.0",
+    "@quirk0.o/cloud-functions-common": "^2.0.6",
     "bluebird": "^3.5.0",
-    "cloud-functions-common": "git+https://github.com/quirk0o/cloud-functions-common.git#v2.0.4",
     "cloud-functions-runtime-config": "^0.1.1",
     "google-cloud": "^0.56.0",
     "js-yaml": "^3.11.0",
