--- a/google/.env_sample
+++ b/google/.env_sample
@@ -1,4 +1,4 @@
-GOOGLE_CLOUD_SERVICE_NAME=serverless-gcf-random
-GOOGLE_CLOUD_PROJECT_NAME=serverless-random
-GOOGLE_CLOUD_KEYFILE=~/.gcloud/keyfile.json
-GOOGLE_STORAGE_BUCKET_NAME=serverless-gcf-random-dev-bucket
+export GOOGLE_CLOUD_PROJECT_NAME=gcloud-project
+export GOOGLE_CLOUD_KEYFILE=~/.gcloud/keyfile.json
+export GOOGLE_STORAGE_BUCKET_NAME=serverless-research-output-bucket
+export GOOGLE_STORAGE_INPUT_BUCKET_NAME=serverless-research-input-bucket
