--- a/google/serverless.yml
+++ b/google/serverless.yml
@@ -1,7 +1,8 @@
-service: ${env:GOOGLE_CLOUD_SERVICE_NAME}
+service: ${self:custom.service}
 
 provider:
   name: google
+  stage: dev
   runtime: nodejs
   project: ${env:GOOGLE_CLOUD_PROJECT_NAME}
   credentials: ${env:GOOGLE_CLOUD_KEYFILE}
@@ -10,6 +11,8 @@ provider:
 plugins:
   - serverless-google-cloudfunctions
 
+custom: ${file(./environment/environment.js)}
+
 package:
   exclude:
     - node_modules/**
@@ -17,28 +20,28 @@ package:
     - .git/**
 
 functions:
-  transfer_128:
-    handler: transfer_128
+  transfer-128:
+    handler: transfer${self:custom.suffix}-128
     memorySize: 128
     events:
       - http: path
-  transfer_256:
-    handler: transfer_256
+  transfer-256:
+    handler: transfer${self:custom.suffix}-256
     memorySize: 256
     events:
       - http: path
-  transfer_512:
-    handler: transfer_512
+  transfer-512:
+    handler: transfer${self:custom.suffix}-512
     memorySize: 512
     events:
       - http: path
-  transfer_1024:
-    handler: transfer_1024
+  transfer-1024:
+    handler: transfer${self:custom.suffix}-1024
     memorySize: 1024
     events:
       - http: path
-  transfer_2048:
-    handler: transfer_2048
+  transfer-2048:
+    handler: transfer${self:custom.suffix}-2048
     memorySize: 2048
     events:
       - http: path
