--- a/packages/ibm/package.json
+++ b/packages/ibm/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "openwhisk-nodejs",
-  "version": "1.0.0",
+  "name": "@quirk0.o/serverless-research-ibm",
+  "version": "1.0.1",
   "description": "Sample OpenWhisk NodeJS serverless framework service.",
+  "private": true,
   "main": "handler.js",
   "scripts": {
     "postinstall": "npm link serverless-openwhisk"
